<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_birthday_card"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_hamburger_tracker"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_hamburger_tracker" />
        <item
            android:id="@+id/nav_dice_roller"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_dice_roller" />
        <item
            android:id="@+id/nav_unscramble"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_unscramble" />
        <item
            android:id="@+id/nav_waterme"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_waterme" />
    </group>
</menu>